--- a/app/src/main/res/layout/activity_admin_res_detalles_pedidos.xml
+++ b/app/src/main/res/layout/activity_admin_res_detalles_pedidos.xml
@@ -67,7 +67,7 @@
                 android:textStyle="bold"
                 android:textColor="@color/btn_dark"
                 android:fontFamily="@font/sen_font"
-                android:layout_marginBottom="20dp"/>
+                android:layout_marginBottom="22dp"/>
 
 
             <!-- Información del cliente  -->
@@ -79,14 +79,15 @@
                 android:textStyle="bold"
                 android:textColor="@color/black"
                 android:fontFamily="@font/sen_font"
-                android:layout_marginBottom="8dp"/>
+                android:layout_marginBottom="18dp"/>
 
             <!-- nombre -->
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:orientation="horizontal"
-                android:gravity="center_vertical">
+                android:gravity="center_vertical"
+                android:layout_marginBottom="4dp">
 
                 <ImageView
                     android:layout_width="16dp"
@@ -99,6 +100,8 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:text="John Dylan Gomez Doe"
+                    android:textSize="15dp"
+                    android:fontFamily="@font/sen_font"
                     android:textColor="@color/text_primary"
                     android:layout_marginStart="8dp"/>
             </LinearLayout>
@@ -108,7 +111,8 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:orientation="horizontal"
-                android:gravity="center_vertical">
+                android:gravity="center_vertical"
+                android:layout_marginBottom="4dp">
 
                 <ImageView
                     android:layout_width="16dp"
@@ -121,6 +125,8 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="Av. La mar 25 urb santa catalina"
+                    android:textSize="15dp"
+                    android:fontFamily="@font/sen_font"
                     android:layout_marginStart="8dp" />
             </LinearLayout>
 
@@ -150,7 +156,7 @@
             <View
                 android:layout_width="match_parent"
                 android:layout_height="1dp"
-                android:layout_marginVertical="12dp"
+                android:layout_marginVertical="18dp"
                 android:background="@color/gray_light"/>
 
 
@@ -176,22 +182,33 @@
             <View
                 android:layout_width="match_parent"
                 android:layout_height="1dp"
-                android:layout_marginVertical="12dp"
+                android:layout_marginVertical="18dp"
                 android:background="@color/gray_light"/>
+
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="Cuenta:"
+                android:textSize="14sp"
+                android:textStyle="bold"
+                android:textColor="@color/black"
+                android:fontFamily="@font/sen_font"
+                android:layout_marginVertical="14dp"/>
 
             <!-- Resumen de costos -->
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:orientation="vertical"
-                android:padding="8dp">
+                android:padding="4dp">
 
                 <!-- Total consumo -->
                 <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:orientation="horizontal"
-                    android:gravity="center_vertical">
+                    android:gravity="center_vertical"
+                    android:layout_marginBottom="4dp">
 
                     <TextView
                         android:layout_width="wrap_content"
@@ -200,14 +217,14 @@
                         android:text="Total consumo:"
                         android:fontFamily="@font/sen_font"
                         android:textColor="@android:color/darker_gray"
-                        android:textSize="14sp" />
+                        android:textSize="15sp" />
 
                     <TextView
                         android:id="@+id/montoPedido"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:text="S/. 96"
-                        android:textColor="@android:color/black"
+                        android:textColor="@android:color/darker_gray"
                         android:textSize="14sp" />
                 </LinearLayout>
 
@@ -225,14 +242,14 @@
                         android:text="Delivery:"
                         android:textColor="@android:color/darker_gray"
                         android:fontFamily="@font/sen_font"
-                        android:textSize="14sp" />
+                        android:textSize="15sp" />
 
                     <TextView
                         android:id="@+id/delivery"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:text="S/. 15"
-                        android:textColor="@android:color/black"
+                        android:textColor="@android:color/darker_gray"
                         android:textSize="14sp" />
                 </LinearLayout>
 
@@ -250,7 +267,7 @@
                         android:layout_weight="1"
                         android:text="TOTAL:"
                         android:textColor="@android:color/black"
-                        android:textSize="16sp"
+                        android:textSize="15sp"
                         android:fontFamily="@font/sen_font"
                         android:textStyle="bold" />
 
