--- a/app/src/main/res/layout/activity_cliente_compra_details.xml
+++ b/app/src/main/res/layout/activity_cliente_compra_details.xml
@@ -250,7 +250,8 @@
             android:layout_marginTop="16dp"
             android:layout_margin="16dp"
             android:padding="16dp"
-            android:textStyle="bold"/>
+            android:textStyle="bold"
+            android:visibility="invisible"/>
 
     </LinearLayout>
 
